modules/CookieConsent/components/CookieConsentBar.module.scss
.cookieConsentBar {
    position: relative;
    z-index: 2;
    padding: $spacing-6 0;
    background: $color-base-white;
    border-bottom: 1px solid $color-borders;

    @media print {
        display: none !important;
    }
}

.container {
    @include container;
}

.wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;

    @include not-desktop {
        display: block;
    }
}

.content {
    max-width: 500px;

    @include not-desktop {
        max-width: none;
        margin-bottom: $spacing-6;
    }
}

.title {
    @include heading-3;

    margin: 0 auto $spacing-2;
    color: $color-base-700;
    font-weight: $font-weight-bold;
}

.text {
    @include text-small;

    color: $color-base-500;

    @include mobile-only {
        margin-bottom: $spacing-3;
    }

    &.custom {
        p {
            @include text-small;
        }
    }
}

.notice {
    @include text-small;

    margin: 0 auto;
    color: $color-base-500;

    @include not-desktop {
        width: 100%;
    }
}

.actions {
    @include desktop-up {
        text-align: right;
    }

    @include not-desktop {
        display: flex;
        flex-wrap: wrap;
        margin-left: 0;
    }
}

.button {
    margin-bottom: $spacing-2;
    padding: $spacing-1 $spacing-2;

    @include tablet-up {
        /* stylelint-disable-next-line max-nesting-depth */
        &:not(:first-child) {
            margin-left: $spacing-3;
        }
    }

    @include mobile-only {
        width: 100%;
    }
}

